traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==Direction.EST) 
^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{left();test=(!isFacingWall()); right()}; 
^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==Direction.WEST) {right(); test=!isFacingWall(); left()}; return(test)}
^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==Direction.WEST) {right(); test=!isFacingWall(); left()}; return(test)}
                                                                             ^