traversal.snake.Snake.scala.code
override def run() 
{def test_fin():Boolean {var test:Boolean=false;
if (getDirection()==Direction.EST) 
{left();test=(!isFacingWall()); right()}; 
if (getDirection()==Direction.WEST) {right(); test=!isFacingWall(); left()}; return(test)}
 var test2:Boolean=false
  while(!isFacingWall())&&(!test2) {forward(); test2=test_fin()};
  while(!isFacingWall()) {forward()}}